# docs/swagger.yaml
@@ -170,6 +170,112 @@ paths:
       summary: Retrieve specialities with pagination and search
       tags:
       - admin
+  /auth/forget-password:
+    post:
+      consumes:
+      - application/json
+      description: get forget password
+      parameters:
+      - description: Phone number
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.ForgetPasswordRequest'
+      produces:
+      - application/json
+      responses: {}
+      summary: get forget password
+      tags:
+      - auth
+  /auth/get-access-token-by-refresh-token:
+    post:
+      consumes:
+      - application/json
+      description: get access token by refresh token
+      parameters:
+      - description: Refresh Token
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RefreshTokenRequest'
+      produces:
+      - application/json
+      responses: {}
+      summary: get access token by refresh token
+      tags:
+      - auth
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: login users
+      parameters:
+      - description: Phone Number
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserLoginRequest'
+      produces:
+      - application/json
+      responses: {}
+      summary: login user
+      tags:
+      - auth
+  /auth/register:
+    post:
+      consumes:
+      - application/json
+      description: creating users
+      parameters:
+      - description: Phone Number
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.UserRegisterRequest'
+      produces:
+      - application/json
+      responses: {}
+      summary: registering user
+      tags:
+      - auth
+  /auth/reset-password:
+    post:
+      consumes:
+      - application/json
+      description: get reset password
+      parameters:
+      - description: password and password_retype
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.PasswordResetRequest'
+      - description: The encrypted key for password reset
+        in: query
+        name: key
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: get reset password
+      tags:
+      - auth
+  /auth/verify-access-token:
+    post:
+      consumes:
+      - application/json
+      description: verify access token
+      produces:
+      - application/json
+      responses: {}
+      summary: verify access token
+      tags:
+      - auth
   /otp/generate:
     post:
       consumes:
@@ -206,110 +312,4 @@ paths:
       summary: Verify OTP
       tags:
       - OTP
-  /users/forget-password:
-    post:
-      consumes:
-      - application/json
-      description: get forget password
-      parameters:
-      - description: Phone number
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.ForgetPasswordRequest'
-      produces:
-      - application/json
-      responses: {}
-      summary: get forget password
-      tags:
-      - users
-  /users/get-access-token-by-refresh-token:
-    post:
-      consumes:
-      - application/json
-      description: get access token by refresh token
-      parameters:
-      - description: Refresh Token
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.RefreshTokenRequest'
-      produces:
-      - application/json
-      responses: {}
-      summary: get access token by refresh token
-      tags:
-      - users
-  /users/login:
-    post:
-      consumes:
-      - application/json
-      description: login users
-      parameters:
-      - description: Phone Number
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.UserLoginRequest'
-      produces:
-      - application/json
-      responses: {}
-      summary: login user
-      tags:
-      - users
-  /users/register:
-    post:
-      consumes:
-      - application/json
-      description: creating users
-      parameters:
-      - description: Phone Number
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.UserRegisterRequest'
-      produces:
-      - application/json
-      responses: {}
-      summary: registering user
-      tags:
-      - users
-  /users/reset-password:
-    post:
-      consumes:
-      - application/json
-      description: get reset password
-      parameters:
-      - description: password and password_retype
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/dto.PasswordResetRequest'
-      - description: The encrypted key for password reset
-        in: query
-        name: key
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses: {}
-      summary: get reset password
-      tags:
-      - users
-  /users/verify-access-token:
-    post:
-      consumes:
-      - application/json
-      description: verify access token
-      produces:
-      - application/json
-      responses: {}
-      summary: verify access token
-      tags:
-      - users
 swagger: "2.0"
